--- a/checkout.html
+++ b/checkout.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Тайтл страницы</title>
+    <title>Оформление заказа | GeekBrains Frontend Course</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -41,7 +41,7 @@
           <button class="header-search__submit" type="submit"><i class="fa fa-search"></i></button>
         </div>
         <div class="header__cartbox">
-          <div class="cart dropdown-menu"><img class="cart__image" src="img/Cart.png" alt="Cart">
+          <div class="cart dropdown-menu"><img class="cart__image" src="img/cart.png" alt="Cart">
             <div class="cart__items-count">2</div>
             <div class="dropdown-menu__container">
               <ul class="cart__items">
