--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Тайтл страницы</title>
+    <title>Главная страница | GeekBrains Frontend Course</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -41,7 +41,7 @@
           <button class="header-search__submit" type="submit"><i class="fa fa-search"></i></button>
         </div>
         <div class="header__cartbox">
-          <div class="cart dropdown-menu"><img class="cart__image" src="img/Cart.png" alt="Cart">
+          <div class="cart dropdown-menu"><img class="cart__image" src="img/cart.png" alt="Cart">
             <div class="cart__items-count">2</div>
             <div class="dropdown-menu__container">
               <ul class="cart__items">
@@ -120,7 +120,7 @@
       <article class="main-slider__container">
         <div class="main-slider__text">
           <h1 class="main-slider__text--h1">The Brand</h1>
-          <h2 class="main-slider__text--h2">of luxerious <span class="color-pink">fashion</span></h2>
+          <h2 class="main-slider__text--h2">of luxerious </h2><span class="color-pink">fashion</span>
         </div>
       </article></a>
     <div class="main-categories container">
@@ -173,11 +173,11 @@
         <article class="products-list-item"><a class="products-list-item__link" href="single.html"><img class="products-list-item__image" src="img/featured-item8.jpg" alt="Mango people t-shirt">
             <h2 class="products-list-item__name">Mango people t-shirt</h2>
             <div class="products-list-item__cost currency">52.00</div></a><a class="products-list-item__cart" href="cart.html">Add to cart</a></article>
-      </div><a class="main-featured__button button-main" href="products.html">Browse all products <i class="fa fa-long-arrow-right"></i></a>
+      </div><a class="main-featured__button button-main" href="products.html">Browse all products </a><i class="fa fa-long-arrow-right"></i>
     </section>
     <aside class="main-offer container"><a class="main-offer__link" href=""><img class="main-offer__image" src="img/footer-banner.jpg" alt="Offer">
         <div class="main-offer__text">
-          <div class="main-offer__text--h1">30% <span class="color-pink">offer</span></div>
+          <div class="main-offer__text--h1">30% </div><span class="color-pink">offer</span>
           <div class="main-offer__text--h2">for women</div>
         </div>
         <ul class="main-offer__wrapper offers offers--column">
