Some minor fixes

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <article class="products-list-item"><a class="products-list-item__link" href="single.html"><img class="products-list-item__image" src="img/featured-item8.jpg" alt="Mango people t-shirt">
             <h2 class="products-list-item__name">Mango people t-shirt</h2>
             <div class="products-list-item__cost currency">52.00</div></a><a class="products-list-item__cart" href="cart.html">Add to cart</a></article>
-      </div><a class="main-featured__button button-main" href="products.html">Browse all products </a><i class="fa fa-long-arrow-right"></i>
+      </div><a class="main-featured__button button-main" href="products.html">Browse all products <i class="fa fa-long-arrow-right"></i></a>
     </section>
     <aside class="main-offer container"><a class="main-offer__link" href=""><img class="main-offer__image" src="img/footer-banner.jpg" alt="Offer">
         <div class="main-offer__text">
