--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <article class="main-slider__container">
         <div class="main-slider__text">
           <h1 class="main-slider__text--h1">The Brand</h1>
-          <h2 class="main-slider__text--h2">of luxerious </h2><span class="color-pink">fashion</span>
+          <h2 class="main-slider__text--h2">of luxerious <span class="color-pink">fashion</span></h2>
         </div>
       </article></a>
     <div class="main-categories container">
@@ -177,7 +177,7 @@
     </section>
     <aside class="main-offer container"><a class="main-offer__link" href=""><img class="main-offer__image" src="img/footer-banner.jpg" alt="Offer">
         <div class="main-offer__text">
-          <div class="main-offer__text--h1">30% </div><span class="color-pink">offer</span>
+          <div class="main-offer__text--h1">30% <span class="color-pink">offer</span></div>
           <div class="main-offer__text--h2">for women</div>
         </div>
         <ul class="main-offer__wrapper offers offers--column">
